# ROCm-Device-Libs

./: CMakeLists.txt
cmake/: OCL.cmake
irif/: CMakeLists.txt
irif/inc/: irif.h
irif/src/: atomic.bc  cz.bc
ocml/src/: builtins.h  erfcinvD.cl  erfcinvF.cl  erfinvD.cl  erfinvF.cl  nativeD.cl  nativeF.cl  nativeH.cl  rcbrtD.cl  rcbrtF.cl
utils/prepare-builtins/: CMakeLists.txt
